--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <!-- Output Anzeige der Fenstergröße unten links -->
-      
+      <div class="windowinfo"></div>
       <nav>
         <!-- Outputcontainer der Wins des Users -->
         <div class="usernav">
